--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_3_6;UNITY_5_3;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_OSX;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;PLAYMAKER;PLAYMAKER_1_8</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_3_6;UNITY_5_3;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_OSX;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -53,6 +53,43 @@
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\SceneController.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoAddExplosionForce.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoAddForce.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoConvertIsometricToScreen.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoConvertScreenToIsometric.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetDrag.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMass.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMode.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMouseIsoPosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMouseIsoTilePosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetPosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetSize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetSpeed.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTilePosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTouchIsoPosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTouchIsoTilePosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetVelocity.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetWorldProps.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsKinematic.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsSleeping.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsUseGravity.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoResize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetDrag.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetIsKinematic.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMass.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMode.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetPosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetSize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetUseGravity.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetVelocity.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetWorldProps.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSleep.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoTranslate.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoWakeUp.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoCollisionEvent.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoTriggerEvent.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Internal\IsoComponentAction.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Internal\IsoFSMEvents.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoAssocList.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollisionListener.cs" />
